tests/base/parser/bad/exps/exp_t-builtin-id-lparen-with.scilexp
(* only unit type would ever parse *)
let one = Uint128 1 in
builtin add (one) (one)
